--- a/Team/index.html
+++ b/Team/index.html
@@ -207,47 +207,29 @@
           </p>
         </div>
         <div class="team__block-2">
-          <h2 class="our__founder-title">Nataliya Moskalenko</h2>
+          <h2 class="our__founder-title">our founder</h2>
           <div class="our__founder-block">
-            <img
-              class="our__founder-img script__img"
-              src="./img/founder.png"
-              alt=""
-            />
+            <div class="img__back">
+              <img
+                class="our__founder-img script__img"
+                src="./img/founder.png"
+                alt=""
+              />
+            </div>
+
             <div class="our__founder-content">
-              <h5 class="content__subtitle">
-                Founder of the public organization Cultura Соntra Вalas. She
-                dedicates her life to helping others through culture and
-                education.
-              </h5>
+              <h3 class="content__subtitle">
+                Natalia <br />
+                Moskalenko
+              </h3>
               <p class="content__paragraph">
-                Born in Ukraine, she studied in the United States, then worked
-                in Austria, and currently resides in Spain, where she actively
-                engages in volunteer activities. <br />
-                <br />
-                The primary goal of her organization is to support individuals
-                who have experienced psychological trauma due to armed conflict.
-                One of the main projects is rehabilitation camps for children
-                who are victims of conflict, as well as for women and combat
-                medics in need of psychological support. <br />
-                <br />
-                Nataliya believes in the power of culture, making cultural
-                projects—such as concerts and artistic events—an essential part
-                of her work. These initiatives not only benefit those affected
-                but also unite people from diverse cultures. One such event
-                featured Ukrainian children performing the well-known song “Let
-                the Children Sing” by José Luis Perales in Madrid. <br />
-                <br />
-                Her activities also include collecting humanitarian aid and
-                organizing charitable events that emphasize the unity of nations
-                and cultures. These events promote awareness of the importance
-                of supporting those affected by war and engage new participants.
-                <br />
-                <br />
-                Nataliya remains optimistic and strives to contribute to a
-                peaceful future through concrete actions that help people
-                recover from the horrors of war and build a new life filled with
-                hope and opportunities.
+                Natalia Moskalenko, licenciada en filología inglesa, es una
+                emprendedora con amplia experiencia en la creación de negocios
+                exitosos y el desarrollo de proyectos sociales. Su trayectoria
+                internacional (estudió y trabajó en EEUU, Austria, Ucrania,
+                España) le ha aportado una visión estratégica y global, que
+                ahora aplica como presidenta de Cultura Contra Balas, donde
+                lidera iniciativas con alto impacto social y sostenible.
               </p>
               <div class="content__social-media">
                 <svg
