--- a/About Us/index.html
+++ b/About Us/index.html
@@ -208,7 +208,9 @@
             </p>
             <img src="./image/Golub.krula 1.png" alt="" class="about__us-img" />
           </div>
-          <div class="content__img"></div>
+          <div class="content__img-back">
+            <img src="./image/team-desktop.png" alt="" class="content__img" />
+          </div>
         </div>
         <div class="about__us-blue">
           <p>
@@ -219,7 +221,7 @@
         <div class="about__us-volunteers">
           <div class="volunteers__top">
             <div class="top__title">
-              <h1>kindness volunteers</h1>
+              <h1 class="_about-title">kindness volunteers</h1>
               <div class="title__imgs">
                 <img
                   src="./image/holub.flamenko (1) 1.png"
@@ -239,56 +241,38 @@
             </p>
           </div>
           <div class="volunteers__bot">
-            <div class="bot__img small"></div>
-            <div class="bot__img big"></div>
-            <div class="bot__img small"></div>
-            <div class="bot__img small"></div>
-            <div class="bot__img small"></div>
-            <div class="bot__img big"></div>
+            <img src="./image/image.png" class="bot__img small" />
+            <img src="./image/image-3.png" class="bot__img big" />
+            <img src="./image/image-1.png" class="bot__img small" />
+            <img src="./image/image-2.png" class="bot__img small" />
+            <img src="./image/IMG_8344.png" class="bot__img small" />
+            <img src="./image/image-4.png" class="bot__img big" />
           </div>
         </div>
         <div class="team__block-2">
-          <h2 class="our__founder-title">Nataliya Moskalenko</h2>
+          <h2 class="our__founder-title _about-title">our founder</h2>
           <div class="our__founder-block">
-            <img
-              class="our__founder-img script__img"
-              src="../Team/img/founder.png"
-              alt=""
-            />
+            <div class="img__back">
+              <img
+                class="our__founder-img script__img"
+                src="../Team/img/founder.png"
+                alt=""
+              />
+            </div>
+
             <div class="our__founder-content">
-              <h5 class="content__subtitle">
-                Founder of the public organization Cultura Соntra Вalas. She
-                dedicates her life to helping others through culture and
-                education.
-              </h5>
+              <h3 class="content__subtitle">
+                Natalia <br />
+                Moskalenko
+              </h3>
               <p class="content__paragraph">
-                Born in Ukraine, she studied in the United States, then worked
-                in Austria, and currently resides in Spain, where she actively
-                engages in volunteer activities. <br />
-                <br />
-                The primary goal of her organization is to support individuals
-                who have experienced psychological trauma due to armed conflict.
-                One of the main projects is rehabilitation camps for children
-                who are victims of conflict, as well as for women and combat
-                medics in need of psychological support. <br />
-                <br />
-                Nataliya believes in the power of culture, making cultural
-                projects—such as concerts and artistic events—an essential part
-                of her work. These initiatives not only benefit those affected
-                but also unite people from diverse cultures. One such event
-                featured Ukrainian children performing the well-known song “Let
-                the Children Sing” by José Luis Perales in Madrid. <br />
-                <br />
-                Her activities also include collecting humanitarian aid and
-                organizing charitable events that emphasize the unity of nations
-                and cultures. These events promote awareness of the importance
-                of supporting those affected by war and engage new participants.
-                <br />
-                <br />
-                Nataliya remains optimistic and strives to contribute to a
-                peaceful future through concrete actions that help people
-                recover from the horrors of war and build a new life filled with
-                hope and opportunities.
+                Natalia Moskalenko, licenciada en filología inglesa, es una
+                emprendedora con amplia experiencia en la creación de negocios
+                exitosos y el desarrollo de proyectos sociales. Su trayectoria
+                internacional (estudió y trabajó en EEUU, Austria, Ucrania,
+                España) le ha aportado una visión estratégica y global, que
+                ahora aplica como presidenta de Cultura Contra Balas, donde
+                lidera iniciativas con alto impacto social y sostenible.
               </p>
               <div class="content__social-media">
                 <svg
@@ -341,11 +325,12 @@
             </div>
           </div>
         </div>
+        <div class="block__volunteers">
+          <h1 class="volunteers__title _about-title">Become a volonteer</h1>
+          <a href="#" class="volunteers__but">google form</a>
+        </div>
       </div>
-      <div class="block__volunteers _container">
-        <h1 class="volunteers__title">Become a volonteer</h1>
-        <a href="#" class="volunteers__but">google form</a>
-      </div>
+
       <footer class="footer">
         <div class="footer__body _container">
           <div class="footer__top">
